template/nginx-ingress/nginx-ingress-api-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    namespace: portfolio 
    name: nginx-ingress-api
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: "true"
        nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
    tls:
        - hosts:
          - $DOMAIN
          secretName: letsencrypt-cluster-certificate-tls
    rules:
        - host: $DOMAIN
          http:
              paths:
                  - path: /api(/|$)(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: backend-service
                            port:
                                number: 8070
        - http:
              paths:
                  - path: /api(/|$)(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: backend-service
                            port:
                                number: 8070
