template/nginx-ingress/nginx-ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: portfolio
  name: nginx-ingress-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - ${API_DOMAIN}
      secretName: letsencrypt-cluster-certificate-tls
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - path: /api/storage
            pathType: Prefix
            backend:
              service:
                name: storage-service
                port:
                  number: 8000
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8070
    - http:
        paths:
          - path: /api/storage
            pathType: Prefix
            backend:
              service:
                name: storage-service
                port:
                  number: 8000
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8070
