template/nginx-ingress/nginx-ingress-root-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    namespace: portfolio 
    name: nginx-ingress
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: "true"
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    tls:
        - hosts:
          - $DOMAIN
          - api.$DOMAIN
          secretName: letsencrypt-cluster-certificate-tls
    rules:
        - host: $DOMAIN
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend-service
                            port:
                                number: 5000
        - host: api.$DOMAIN
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: backend-service
                            port:
                                number: 8070
        - http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend-service
                            port:
                                number: 5000
