template/nginx-ingress/nginx-ingress-root.template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${KUBE_NAMESPACE}
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - ${KUBE_DOMAIN}
        - ${KUBE_API_DOMAIN}
      secretName: letsencrypt-cluster-certificate-tls
  rules:
    - host: ${KUBE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 5000
    - host: ${KUBE_API_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8070
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 5000
